2011-02-01  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/haikyo.py: Added support for proxy.
	* utils/urlget.py: Fixed a bug.

2011-01-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.2 release.
	* preferences/plugin.py: Fixed a plugin icon size.

2011-01-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/info.py: Added a quotation for google map image title.

2011-01-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* help/*: Updated help documents, images and translations.
	  Thanks Cristian Marchi!

2011-01-24  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/iconimage.py: Fixed an icon scale bug.
	* help/C/gphotoframe.xml: Updated help documentation.
	  Thanks Cristian Marchi!

2011-01-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py: Added support for removing from catalog on Shotwell 0.8.

2011-01-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/favicon.py: Added checking to my flickr photo for favoring.
	* base/base.py, actor/info.py: Added support for changing zoom
	  level for map.
	* constants.py: Added checking for user directory permissions.

2011-01-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/geocoding.py: Added support for reverse geocoding on tooltip.

2011-01-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/api.py: Fixed count & per_page options.
	* flickr/__init__.py: Improved code for rate of latest photos.

2011-01-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Added support for large images.
	* flickr/api.py: Added support for url_z and url_l.

2011-01-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* flickr/__init__.py: Added new gconf key for rate of latest photos.

2011-01-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* shotwell.py: Disable a ban icon on shotwell plugin by default.

2010-12-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, plugins/base.py: Added ban (black list) functions.

2010-12-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
